# Sowtee-back

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  test_learning_loop_api_proof.py  test_learning_loop_proof.py
data/profiles/: user_1771056520441.json  user_filmon-nezif.json  user_filmonnn.json
src/: __init__.py  config.py  main.py  run.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  agent_tools.py  elevenlabs_tts.py  error_logger.py  intent.py  learning_tracker.py  memory.py  model_manager.py  orchestrator.py  predictive_suggestions.py  startup_checks.py  strategy_manager.py  translation.py  tts_direction_enricher.py  urdu_tts.py  user_profile.py  vision.py  voice_clone.py  word_suggestions.py
src/skills/: __init__.py  base_skill.py  skill_registry.py
src/skills/speaking/: __init__.py  abbreviation_expander.py  letter_cards.py  skill.py
